--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                       </button>
                     </div>
                     <h1>
-                      Mico <br>
+                      CI/CD <br>
                       <span>
-                        Hospital
+                        Pipeline
                       </span>
                     </h1>
                     <p>
@@ -835,3 +835,4 @@
 </body>
 
 </html>
+
