--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our <span>Pipeline is Working</span>
+          Our <span>Pipeline Working</span>
         </h2>
       </div>
       <div class="carousel-wrap ">
@@ -835,4 +835,5 @@
 </body>
 
 </html>
+
 
