--- a/doctor.html
+++ b/doctor.html
@@ -54,7 +54,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : demo@gmail.com
+                Email : demo_d2_training@gmail.com
               </span>
             </a>
             <a href="">
@@ -403,5 +403,6 @@
 
 
 </body>
+
 
 </html>
