--- a/doctor.html
+++ b/doctor.html
@@ -54,7 +54,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : demo_d2_training@gmail.com
+                Email : demo_d2@gmail.com
               </span>
             </a>
             <a href="">
@@ -406,3 +406,4 @@
 
 
 </html>
+
